@@ -45,7 +45,7 @@
 			<li>0.7.2  MIDI mapping, first stable version</li>
 			<li>0.7.8  Plugin interface, UI refactoring</li>
 			<li>0.8.x  Visualization (the default visualization plugin)</li>
-			<li>0.9.x  Stable version</li>
+			<li>0.9.x  File reader plugin API, event filter/modifier API. Stable version.</li>
 			<li>1.x+   Translation, documentation, Maintaince only</li>
 		</ul>
 		<h3 id="faq">FAQs</h3>
