@@ -7,9 +7,10 @@
 	<h1>Version information</h1>
 	<div style="text-align:center;">
 		<img src="../img/qmidiplyr.png"><br>
-		QMidiPlayer APP_VERSION<br>
-		An MIDI player based on fluidsynth and Qt.<br>
+		QMidiPlayer -- An MIDI player based on fluidsynth and Qt.<br>
 		Written by Chris Xiong.<br>
+		Version APP_VERSION<br>
+		Built at BUILD_DATE<br>
 		libfluidsynth version: RT_FLUIDSYNTH_VERSION (Built against CT_FLUIDSYNTH_VERSION)<br>
 		Qt version: RT_QT_VERSION_STR (Built against CT_QT_VERSION_STR)<br>
 	</div><br>
