@@ -30,18 +30,18 @@
 		To use the visualization, click the Visualization button in the main window.<br>
 		The visualization plugin adds two new option tabs.
 		<h3>Controls</h3>
-		<pre>
+<pre>
    forward
-      |              ↱Press and hold left mouse button:
-   up |  down       ┌──┬──┐ Adjust camera direction.
-   ↓  ↓  ↓          │  │  │
-   Q  W  E          ├──┴──┤
-   A  S  D          │     │
-   ↑  ↑  ↑          │     │
-left  |  right      │     │
-      |             └─────┘
+      |                          ↱Hold left mouse button and drag:
+   up |  down                   ┌──┬──┐     Adjust viewport.
+   ↓  ↓  ↓                      │  │  │
+   Q  W  E  R←reset viewport    ├──┴──┤
+   A  S  D                      │     │
+   ↑  ↑  ↑                      │     │
+left  |  right                  │     │
+      |                         └─────┘
    backward
-		</pre>
+</pre>
 		<h3>Options</h3>
 		<ul>
 			<li>
@@ -52,6 +52,7 @@ left  |  right      │     │
 					<li>Arrange channels on a stair: If checked, virtual pianos will be arranged on a stair-like shape. This option has no effect if virtual piano is not shown.</li>
 					<li>Show channel labels: If checked, channel preset will be shown on the left side.</li>
 					<li>Show particles: Whether to draw particles. Very resource-intensive!</li>
+					<li>Horizontal Visualization: Uses a horizontal visualization style. Overrides everything above except 3D Notes.</li>
 					<li>View distance: This option affects the maximum number of notes rendered on the screen.</li>
 					<li>Note stretch: The length multiplier of notes.</li>
 					<li>Minimum note length: Avoid notes that are too short to be visible by adjusting this value.</li>
